<resources>
    <!--Signup, login and startup screen-->
    <!--Login-->
    <string name="login_hint">Электронная почта</string>
    <string name="pass_hint">Пароль</string>
    <string name="login">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="first_time_ref">Впервые тут? <u>Зарегистрироваться.</u></string>
    <!--Signup-->
    <string name="ready_questionM">Готовы начать?</string>
    <string name="requirements">Введите адрес электронной почты, имя пользователя, а также пароль, чтобы создать аккаунт</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="register">Зарегистрироваться</string>
    <string name="rights">Все права защищены (нет)</string>
    <!--Startup-->
    <string name="heading1">Данные о фильмах и сериалах онлайн</string>
    <string name="heading2">Приложение служит в информационных целях и не предназначено для стриминга</string>
    <string name="get_started">Регистрация</string>

    <!--MainActivity-->
    <string name="home">Главная</string>
    <string name="soon">Скоро</string>
    <string name="search">Поиск</string>
    <string name="more">Прочее</string>

    <string name="play_btn">Смотреть</string>
    <string name="more_text">Подробнее</string>
    <string name="category">Категория</string>

    <!--Profile and more activity-->
    <string name="profile_n_more">Профиль &amp; Прочее</string>
    <string name="profile_username">Имя пользователя</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="notification">Уведомления</string>
    <string name="my_list">Мой список</string>
    <string name="account">Настройки аккаунта</string>
    <string name="about_app">О приложении</string>
    <string name="sign_out">Выйти</string>

    <string name="notifications_settings">Никаких уведомлений у приложения нет.</string>

    <string name="about_app_text">Приложение создано в рамках курсового проекта образовательной деятельности студента.</string>

    <string name="email_address">Адрес электронной почты</string>
    <string name="email_text">email@example.com</string>
    <string name="password_text">Сменить пароль</string>
    <string name="delete_account">Удалить аккаунт</string>

    <string name="profile_edit_text">Редактирование профиля</string>
    <string name="apply">Применить</string>
    <string name="username_et">Имя пользователя</string>

    <string name="change_icon">Выберите иконку</string>

    <!--Soon fragment-->
    <string name="month">Месяц</string>
    <string name="month_number">00</string>
    <string name="coming">Выходит 00 месяца</string>
    <string name="soon_description">Описание</string>

    <string name="more_settings">Прочие настройки</string>

    <string name="search_hint">Название…</string>
    <string name="search_button">Искать</string>
    <string name="search_result">Реузьтаты поиска:</string>
    <string name="search_history">Вы также искали:</string>
    <string name="search_clear">История поиска пуста</string>

    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="question">Удалить из истории поиска?</string>

    <!--Details fragment-->
    <string name="resource_name">Название ресурса</string>
    <string name="resource_release_year">Год</string>
    <string name="resource_age">Возраст</string>
    <string name="resource_duration">Длительность</string>
    <string name="resource_trailer">Трейлер</string>
    <string name="resource_description">Описание</string>
    <string name="resource_cast">В ролях:</string>
    <string name="resource_cast_tv">Роли</string>
    <string name="resource_genres">Жанры:</string>
    <string name="resource_genres_tv">Жанры</string>
    <string name="resource_about">О ресурсе:</string>
    <string name="resource_about_tv">О ресурсе</string>
    <string name="resource_available">Доступно для просмотра:</string>

    <!--old-->
    <string name="app_name">MovieStreamingApp</string>
    <string name="movies">Фильмы</string>
    <string name="series">Сериалы</string>
    <string name="genre_text">Жанры:</string>
    <string name="spacer">|</string>
    <string name="common_img_desc">Image</string>
    <string name="duration">Длительность</string>
    <string name="list_genre">Список жанров</string>
    <string name="description">Описание</string>
    <string name="age">Возраст</string>
    <string name="name">Название ресурса</string>
    <string name="year">Год выхода</string>
    <string name="about_text">О ресурсе:</string>

    <!--Images description-->
    <string name="nested_scroll">nested_scroll_view</string>
    <string name="image_description">common_image_description</string>
    <string name="background">startup_background</string>
    <string name="icon_description">common_icon_description</string>
    <string name="logo_desc">main-logo-netflix</string>
</resources>