<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="26dp"
    android:background="@color/black">


    <TextView
        android:id="@+id/monthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/month"
        android:textColor="@color/white_80p"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/monthNumTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/month_number"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/monthTV"
        app:layout_constraintTop_toBottomOf="@+id/monthTV" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="176dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/monthTV"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itemSoonImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/common_img_desc"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/monthTV"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/itemSoonLogoRL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/trailerBtn"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <ImageView
            android:id="@+id/itemSoonLogo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/common_img_desc"
            android:scaleType="fitStart"
            tools:srcCompat="@tools:sample/avatars" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/trailerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/button_white_rounded"
        app:layout_constraintBottom_toBottomOf="@+id/itemSoonLogoRL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemSoonLogoRL">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingVertical="8dp"
            android:paddingHorizontal="28dp">

            <ImageView
                android:id="@+id/playIcon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/icon_description"
                app:srcCompat="@drawable/icon_play" />

            <TextView
                android:id="@+id/trailerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/playIcon"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/resource_trailer"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/comingTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/coming"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/itemSoonLogoRL"
        app:layout_constraintTop_toBottomOf="@+id/itemSoonLogoRL" />

    <TextView
        android:id="@+id/soonDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/soon_description"
        android:textColor="@color/white_70p"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/comingTV"
        app:layout_constraintTop_toBottomOf="@+id/comingTV" />

</androidx.constraintlayout.widget.ConstraintLayout>