<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".screens.activities.ResourceDetailActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/posterBlurImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/posterImage"
                android:layout_width="180dp"
                android:layout_height="270dp"
                android:layout_marginTop="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:elevation="10dp"
                app:shapeAppearanceOverlay="@style/Round8dpStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:id="@+id/blackView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="-10dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/resourceGroupBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/resourceGroupBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/leftArrowImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/icon_description"
                    app:srcCompat="@drawable/icon_left_arrow" />

                <TextView
                    android:id="@+id/resourceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/leftArrowImage"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/resource_name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/yearTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resource_release_year"
                android:textSize="12sp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/white_80p"
                app:layout_constraintBottom_toBottomOf="@+id/ageTV"
                app:layout_constraintStart_toStartOf="@+id/posterImage"
                app:layout_constraintTop_toTopOf="@+id/ageTV" />

            <TextView
                android:id="@+id/ageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:text="@string/resource_age"
                android:textSize="12sp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/white_80p"
                app:layout_constraintEnd_toStartOf="@+id/durationTV"
                app:layout_constraintStart_toEndOf="@+id/yearTV"
                app:layout_constraintTop_toBottomOf="@+id/posterImage" />

            <TextView
                android:id="@+id/durationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resource_duration"
                android:textSize="12sp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/white_80p"
                app:layout_constraintBottom_toBottomOf="@+id/ageTV"
                app:layout_constraintEnd_toEndOf="@+id/posterImage"
                app:layout_constraintTop_toTopOf="@+id/ageTV"
                app:layout_constraintVertical_bias="0.0" />

            <RelativeLayout
                android:id="@+id/myListGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ageTV">

                <ImageView
                    android:id="@+id/myListImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/icon_description"
                    app:srcCompat="@drawable/icon_plus" />

                <TextView
                    android:id="@+id/myListTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myListImage"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/my_list"
                    android:textColor="@color/white_90p"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/trailerBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/button_white_rounded"
                app:layout_constraintBottom_toBottomOf="@+id/myListGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/myListGroup"
                app:layout_constraintTop_toTopOf="@+id/myListGroup">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/playIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/icon_description"
                        app:srcCompat="@drawable/icon_play" />

                    <TextView
                        android:id="@+id/trailerTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_toEndOf="@id/playIcon"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/resource_trailer"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="18dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myListGroup" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:text="@string/resource_cast"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/white_70p"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTV" />

            <TextView
                android:id="@+id/castTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="18dp"
                android:text="@string/resource_cast_tv"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/white_70p"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cast"
                app:layout_constraintTop_toTopOf="@+id/cast" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:text="@string/resource_genres"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/white_70p"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast" />

            <TextView
                android:id="@+id/genresTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="18dp"
                android:text="@string/resource_genres_tv"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/white_70p"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/genres"
                app:layout_constraintTop_toTopOf="@+id/genres" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:text="@string/resource_about"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/white_70p"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genres" />

            <TextView
                android:id="@+id/aboutTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="18dp"
                android:text="@string/resource_about_tv"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/white_70p"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/about"
                app:layout_constraintTop_toTopOf="@+id/about" />

            <TextView
                android:id="@+id/available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/resource_available"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/availableRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/available" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>