<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="18dp"
    android:background="@drawable/dialog_br6">


    <TextView
        android:id="@+id/titleName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/question"
        android:textColor="@color/white_90p"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleName" />

    <RelativeLayout
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:background="@drawable/ripple_effect_w40rec"
        app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
        app:layout_constraintTop_toBottomOf="@+id/questionTV">

        <TextView
            android:id="@+id/cancelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:background="@drawable/ripple_effect_w40rec"
        app:layout_constraintBottom_toBottomOf="@+id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelBtn">

        <TextView
            android:id="@+id/deleteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/delete"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>