<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".screens.activities.AboutAppActivity">

    <RelativeLayout
        android:id="@+id/aboutAppGroupBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/leftArrowImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_description"
            app:srcCompat="@drawable/icon_left_arrow" />

        <TextView
            android:id="@+id/aboutApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/leftArrowImage"
            android:fontFamily="@font/inter_bold"
            android:text="@string/about_app"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/aboutAppTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:text="@string/about_app_text"
        android:fontFamily="@font/inter_bold"
        android:textSize="16sp"
        android:textColor="@color/white_80p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppGroupBack" />
</androidx.constraintlayout.widget.ConstraintLayout>